# course-factory

./: .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml
alembic/: env.py
course_factory/: __init__.py  __main__.py  workspace.py
course_factory/api/: __init__.py  app.py  course_router.py  deps.py  schemas.py  setup_router.py  workspace_router.py
course_factory/cli/: __init__.py  app.py  config_cmd.py  keygen_cmd.py  pipeline_cmd.py
course_factory/config/: __init__.py  crypto.py  defaults.py  settings.py
course_factory/db/: __init__.py  models.py  session.py
course_factory/discovery/: __init__.py
course_factory/knowledge/: __init__.py  chunker.py  embedder.py  extractor.py  fetcher.py  stage.py  vector_store.py
course_factory/license/: __init__.py  keygen.py  models.py  validator.py
course_factory/llm/: __init__.py  providers.py  router.py  types.py
course_factory/media/: __init__.py
course_factory/notifications/: __init__.py  telegram.py
course_factory/pipeline/: __init__.py  engine.py  events.py  stage.py
course_factory/production/: __init__.py
course_factory/publish/: __init__.py
course_factory/qa/: __init__.py
course_factory/research/: __init__.py
course_factory/synthesis/: __init__.py
course_factory/tui/: __init__.py  wizard.py
docs/: index.md  mkdocs.yml
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: ai.ts  client.ts  courses.ts  engines.ts  graph.ts  pages.ts  setup.ts  tables.ts  workspace.ts
frontend/src/components/ai/: ChatPanel.tsx
frontend/src/components/dashboard/: CourseCard.tsx  CreateCourseModal.tsx  Dashboard.tsx
frontend/src/components/editor/: ImageUploadModal.tsx  MarkdownRenderer.tsx  PageEditor.tsx  PagePickerModal.tsx  SlashCommandMenu.tsx
frontend/src/components/engines/: EnginePanel.tsx
frontend/src/components/graph/: GraphView.tsx
frontend/src/components/home/: HomeView.tsx
frontend/src/components/layout/: AppShell.tsx  Sidebar.tsx  StepIndicator.tsx  WizardLayout.tsx
frontend/src/components/pages/: PageList.tsx
frontend/src/components/search/: SearchModal.tsx
frontend/src/components/shared/: ConnectionBadge.tsx  InputField.tsx  SecretField.tsx  StatusCard.tsx  StepNavigation.tsx  TestButton.tsx  WorkspaceIcon.tsx
frontend/src/components/steps/: LicenseStep.tsx  LlmStep.tsx  NotificationsStep.tsx  ReviewStep.tsx  ServicesStep.tsx  WelcomeStep.tsx
frontend/src/hooks/: useApp.ts  useConnectionTest.ts  useSetupWizard.ts  useWorkspace.ts
frontend/src/types/: app.ts  index.ts  setup.ts  workspace.ts
frontend/src/utils/: fileType.ts
katja/: __init__.py
katja/ai/: __init__.py  agent.py  commands.py  providers.py  router.py
katja/api/: __init__.py  app.py  deps.py  schemas.py
katja/api/routers/: ai.py  assets.py  engines.py  graph.py  imports.py  pages.py  setup.py  tables.py
katja/cli/: __init__.py  app.py  config_cmd.py  engine_cmd.py  import_cmd.py  keygen_cmd.py  page_cmd.py  table_cmd.py
katja/config/: __init__.py  settings.py
katja/core/: __init__.py  graph.py  index.py  models.py  pdf.py  seed.py  store.py  vector.py
katja/engines/: __init__.py  article.py  base.py  course.py  docs.py  spec.py
katja/importers/: markdown.py  notion.py
katja/license/: __init__.py  keygen.py  models.py  validator.py
katja/tables/: __init__.py  engine.py  models.py  templates.py
keys/: public.key
localnotion/: __init__.py
localnotion/ai/: agent.py  commands.py  providers.py  router.py  types.py
localnotion/api/: __init__.py  app.py  deps.py  schemas.py
localnotion/api/routers/: ai.py  assets.py  engines.py  graph.py  imports.py  pages.py  setup.py  tables.py
localnotion/api/static/: index.html
localnotion/cli/: __init__.py  app.py  config_cmd.py  engine_cmd.py  import_cmd.py  keygen_cmd.py  page_cmd.py  table_cmd.py
localnotion/config/: __init__.py  settings.py
localnotion/core/: graph.py  index.py  models.py  seed.py  store.py  vector.py
localnotion/engines/: article.py  base.py  course.py  docs.py  spec.py
localnotion/importers/: __init__.py  markdown.py  notion.py
localnotion/license/: __init__.py  models.py
localnotion/notifications/: __init__.py  telegram.py
localnotion/tables/: engine.py  templates.py
scripts/: generate_keypair.py  insert_wikilinks.py  migrate_workspaces.py
tests/: test_cli.py  test_config.py  test_license.py
(+18 files in other folders)
