[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "katja"
version = "0.1.0"
description = "Katja — local-first knowledge operating system"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "SL-MAR", email = "smr.laignel@gmail.com"}
]
keywords = ["knowledge", "local-first", "ai", "wiki", "markdown"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "cryptography>=41.0",
    "pynacl>=1.5.0",
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "httpx>=0.25",
    "aiohttp>=3.9",
    "qdrant-client>=1.7",
    "python-multipart>=0.0.6",
    "jinja2>=3.0",
    "python-ulid>=2.0.0",
    "python-frontmatter>=1.0.0",
    "markdown>=3.5",
    "fpdf2>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
katja = "katja.cli:app_main"

[project.urls]
Homepage = "https://github.com/SL-Mar/katja"
Repository = "https://github.com/SL-Mar/katja"

[tool.setuptools.packages.find]
where = ["."]
include = ["katja*"]
exclude = ["tests*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "S"]
ignore = ["E501", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]

[tool.coverage.run]
source = ["katja"]
branch = true
omit = ["*/tests/*"]
